kubernetes.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $SERVICE_NAME
  namespace: $NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - http:
        paths:
          - path: $CONTEXT_PATH
            backend:
              serviceName: $SERVICE_NAME
              servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME
  namespace: $NAMESPACE
  labels:
    monitoring: $SERVICE_NAME
spec:
  selector:
    app: $SERVICE_NAME
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE_NAME
  namespace: $NAMESPACE
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: $SERVICE_NAME
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: $SERVICE_NAME
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - $SERVICE_NAME
              topologyKey: "kubernetes.io/hostname"
      hostAliases:
        - ip: 10.28.101.183
          hostnames:
            - eip183
        - ip: 10.28.101.168
          hostnames:
            - eip168
        - ip: 10.28.101.169
          hostnames:
            - eip169
        - ip: 10.28.101.164
          hostnames:
            - eip164
      nodeSelector:
        group: $NODE_SELECTOR
      volumes:
        - name: pv-storage
          hostPath:
            path: /storage/kubernetes/applogs/
            type: Directory
      containers:
        - name: $SERVICE_NAME
          image: omegastroy:18002/$SERVICE_NAME:$VERSION
          imagePullPolicy: Always
          volumeMounts:
            - name: pv-storage
              mountPath: /applogs/
          ports:
            - containerPort: 8080
              name: web
            - containerPort: 5999
              name: debug
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
            requests:
              cpu: "250m"
              memory: "512Mi"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: $CONTEXT_PATH/actuator/health
              port: web
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 60
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: $CONTEXT_PATH/actuator/health
              port: web
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 60
      imagePullSecrets:
        - name: nexus-secret
      restartPolicy: Always
